--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,15 @@
     </style>
 </head>
 <body>
+
+<h1><%= title %></h1>
+    <p>Welcome to <%= title %></p>
+        <%for(var i=0;i<bird.length;i++){%>    
+        <p>Name: <%= bird[i].name %></p>
+        <p>Latin Name: <%= bird[i].latin %></p>
+        <img src="<%= bird[i].images %>" class="img-responsive" width="150px">
+        <% } %>
+
 <div class="container">
 
     <% if(!user) { %>
