User auth + birds list

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,10 +16,9 @@
             <input type='text', name="username", placeholder='Enter Username'>
             <input type='password', name="password", placeholder='Password'>
             <input type="submit">
-            <a href="/">Cancel</a>
+            <a href="/">CANCEL</a>
         </form>
     </div>
-
 </div>
 </body>
 </html>
