--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,14 +10,6 @@
 </head>
 <body>
 
-<h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-        <%for(var i=0;i<bird.length;i++){%>    
-        <p>Name: <%= bird[i].name %></p>
-        <p>Latin Name: <%= bird[i].latin %></p>
-        <img src="<%= bird[i].images %>" class="img-responsive" width="150px">
-        <% } %>
-
 <div class="container">
 
     <% if(!user) { %>
@@ -29,6 +21,13 @@
     <% if(user) { %>
 
         <p>Welcome <%= user.username %></p>
+
+        <h1>Birds</h1>
+        <%for(var i=0;i<bird.length;i++){%>    
+        <p>Name: <%= bird[i].name %></p>
+        <p>Latin Name: <%= bird[i].latin %></p>
+        <img src="<%= bird[i].images %>" class="img-responsive" width="150px">
+        <% } %>
 
         <a href="/logout">LOGOUT</a>
 
