--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,12 +12,34 @@
 
         <p>Welcome <%= user.username %></p>
 
-        <h1>Birds</h1>
-        <%for(var i=0;i<bird.length;i++){%>    
-        <p>Name: <%= bird[i].name %></p>
-        <p>Latin Name: <%= bird[i].latin %></p>
-        <img src="<%= bird[i].images %>" class="img-responsive" width="150px">
-        <% } %>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+          Add a bird
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+              </div>
+              <div class="modal-body">
+                <h1>Birds</h1>
+                <%for(var i=0;i<bird.length;i++){%>    
+                <p>Name: <%= bird[i].name %></p>
+                <p>Latin Name: <%= bird[i].latin %></p>
+                <img src="<%= bird[i].images %>" class="img-responsive" width="150px">
+                <% } %>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <a href="/logout">LOGOUT</a>
 
@@ -26,3 +48,6 @@
 </div>
 
 <% include ./partials/footer %>
+
+
+
