--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,28 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <style>
-        body        { padding-top:80px; }
+        body        { padding-top:80px;
+  /* Location of the image */
+  background-image: url('http://i.imgur.com/iDict9w.jpg');
+  
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
+  
+  /* Background image is fixed in the viewport so that it doesn't move when 
+     the content's height is greater than the image's height */
+  background-attachment: fixed;
+  
+  /* This is what makes the background image rescale based
+     on the container's size */
+  background-size: cover;
+  
+  /* Set a background color that will be displayed
+     while the background image is loading */
+  background-color: #464646;
+}
     </style>
 </head>
 <body>
@@ -13,6 +34,8 @@
 <div class="container">
 
     <% if(!user) { %>
+        <h1>WHAT THE DUCK</h1>
+
         <a href="/login">LOGIN</a>
 
         <a href="/register">SIGNUP</a>
@@ -21,16 +44,14 @@
     <% if(user) { %>
 
         <p>Welcome <%= user.username %></p>
-
         <h1>Birds</h1>
         <%for(var i=0;i<bird.length;i++){%>    
-        <p>Name: <%= bird[i].name %></p>
-        <p>Latin Name: <%= bird[i].latin %></p>
-        <img src="<%= bird[i].images %>" class="img-responsive" width="150px">
+            <p>Name: <%= bird[i].name %></p>
+            <p>Latin Name: <%= bird[i].latin %></p>
+            <img src="<%= bird[i].images %>" class="img-responsive" width="150px">
         <% } %>
-
         <a href="/logout">LOGOUT</a>
-
+        
     <% } %>
 
 </div>
