--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,20 +5,50 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <style>
-        body        { padding-top:80px; }
+        .textboxlogin {
+            opacity: 0.2;
+            height: 50px;
+        } 
+
+
+        .btn-default {
+            background-color: black;
+            color: white;
+        }
+
+        body        { padding-top:80px;
+  /* Location of the image */
+  background-image: url('http://i.imgur.com/iDict9w.jpg');
+  
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
+  
+  /* Background image is fixed in the viewport so that it doesn't move when 
+     the content's height is greater than the image's height */
+  background-attachment: fixed;
+  
+  /* This is what makes the background image rescale based
+     on the container's size */
+  background-size: cover;
+  
+  /* Set a background color that will be displayed
+     while the background image is loading */
+  background-color: #464646;
+}
     </style>
 </head>
 <body>
 <div class="container">
 
-    <div class="jumbotron text-center">
-        <form method="post" action="/login">
-            <input type='text', name="username", placeholder='Enter Username'>
-            <input type='password', name="password", placeholder='Password'>
-            <input type="submit">
+    <form method="post" action="/login">
+            <input class="textboxlogin" type='text', name="username", placeholder='Enter Username'>
+            <input class="textboxlogin" type='password', name="password", placeholder='Password'>
+            <input class="btn btn-default btn-lg" type="submit">
             <a href="/">CANCEL</a>
-        </form>
-    </div>
+    </form>
 </div>
 </body>
 </html>
