added partials to views

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,3 +27,14 @@ body {
 a {
   color: #00B7FF;
 }
+
+.textboxlogin {
+            opacity: 0.2;
+            height: 50px;
+        } 
+
+
+        .btn-default {
+            background-color: black;
+            color: white;
+        }
