--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,12 +26,17 @@
                 <h4 class="modal-title" id="myModalLabel">Modal title</h4>
               </div>
               <div class="modal-body">
-                <h1>Birds</h1>
-                <%for(var i=0;i<bird.length;i++){%>    
-                <p>Name: <%= bird[i].name %></p>
-                <p>Latin Name: <%= bird[i].latin %></p>
-                <img src="<%= bird[i].images %>" class="img-responsive" width="150px">
-                <% } %>
+                  <h1>Birds</h1>
+                <div class="col-sm-2">
+
+                  <%for(var i=0;i<bird.length;i++){%>    
+                  <p>Name: <%= bird[i].name %></p>
+                  <p>Latin Name: <%= bird[i].latin %></p>
+
+                  <img src="<%= bird[i].images %>" class="img-responsive" width="150px">
+                  <% } %>
+                </div>
+
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -40,6 +45,14 @@
             </div>
           </div>
         </div>
+
+        <section>
+        <h3>Birds You've Seen</h3>
+<!--         <% for (var i = 0; i < bird.length; i++) { %>
+            <h6><%= bird[i].name %></h6>
+            <img src="<%= bird[i].images %>" class="img-responsive" width="150px">
+        <% } %> -->
+        </section>
 
         <a href="/logout">LOGOUT</a>
 
