--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
 <div class="container">
 
     <div class="jumbotron text-center">
-        <form method="post" action="/login">
+        <form method="post" action="/register">
             <input type='text', name="username", placeholder='Enter Username'>
             <input type='password', name="password", placeholder='Password'>
             <input type="submit">
