removed login logout from body

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,8 @@
 
 <div class="container">
 
-    <% if(!user) { %>
-        <h1>WHAT THE DUCK</h1>
-
-        <a href="/login">LOGIN</a>
-
-        <a href="/register">SIGNUP</a>
+     <% if(!user) { %>
+        <h1 id="hero">what the duck</h1>
     <% } %>
 
     <% if(user) { %>
