--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
 	        <li><a href="#">Birds</a></li>
-	        <li><a href="#">Map</a></li>
+	        <li><a href="/map">Map</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
 	      	<li class="active"><a href="/register">Sign Up<span class="sr-only">(current)</span></a></li>
