updated login and register pages

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,12 +2,16 @@
 
 <div class="container">
 
-    <div class="jumbotron text-center">
+    <div class="row">
+
+    <div class= "register text-center col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-s-offset-3 col-xs-6 col-xs-offset-3">
+    	<p class="s-text">Sign up!</p>
         <form method="post" action="/register">
-            <input type='text', name="username", placeholder='Enter Username'>
+            <input type='text', name="username", placeholder='Email'>
             <input type='password', name="password", placeholder='Password'>
-            <input type="submit">
+            <input type="submit", class="s-submit">
         </form>
+    </div>
     </div>
 
 </div>
