--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,22 +4,17 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   /* Location of the image */
   background-image: url('http://i.imgur.com/iDict9w.jpg');
-  
   /* Background image is centered vertically and horizontally at all times */
   background-position: center center;
-  
   /* Background image doesn't tile */
   background-repeat: no-repeat;
-  
   /* Background image is fixed in the viewport so that it doesn't move when 
      the content's height is greater than the image's height */
   background-attachment: fixed;
-  
   /* This is what makes the background image rescale based
      on the container's size */
   /*background-size: cover;*/
   background-size: 100%;
-  
   /* Set a background color that will be displayed
      while the background image is loading */
   background-color: #464646;
@@ -42,16 +37,38 @@ a {
 	font-size: 2em;
 }
 
+.register {
+	margin-top: 20%;
+	padding: 5% 5%;
+	color: white;
+	-webkit-border-radius: 10px 10px 10px 10px;
+	-moz-border-radius: 10px 10px 10px 10px;
+	border-radius: 10px 10px 10px 10px;
+	background:rgba(142,142,143,0.3);
+	-webkit-box-shadow: #4F4029 8px 8px 8px;
+	-moz-box-shadow: #4F4029 8px 8px 8px; 
+	box-shadow: #4F4029 8px 8px 8px;
+}
+
+.s-text {
+	font-size: 1.5em;
+}
+
+.s-submit {
+	color: black;
+}
+
 .textboxlogin {
-            opacity: 0.2;
-            height: 50px;
-        } 
+	margin-top: 25%;
+  opacity: 0.1;
+  height: 50px;
+} 
 
 
-        .btn-default {
-            background-color: black;
-            color: white;
-        }
+.btn-default {
+  background-color: black;
+  color: white;
+}
 
 .thumbnail {
   height: 150px;
