--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
-<div class="container">
+<div class="container login">
   <form method="post" action="/login">
     <input class="textboxlogin" type='text', name="username", placeholder='Enter Username'>
     <input class="textboxlogin" type='password', name="password", placeholder='Password'>
