--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,14 @@
 <% include ./partials/header %>
 
-<div class="container login">
-  <form method="post" action="/login">
-    <input class="textboxlogin" type='text', name="username", placeholder='Enter Username'>
-    <input class="textboxlogin" type='password', name="password", placeholder='Password'>
-    <input class="btn btn-default btn-lg" type="submit">
-    <a href="/">CANCEL</a>
-  </form>
+<div class="container">
+	<div class= "login text-center col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-s-offset-3 col-xs-6 col-xs-offset-3">	
+	  <form method="post" action="/login">
+	    <input class="textboxlogin" type='text', name="username", placeholder='Email'>
+	    <input class="textboxlogin" type='password', name="password", placeholder='Password'>
+	    <input class="btn btn-default btn-lg" type="submit">
+	    <a href="/">CANCEL</a>
+	  </form>
+	 </div> 
 </div>
 
 <% include ./partials/footer %>
