--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,25 +21,26 @@
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
+
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                <h4 class="modal-title" id="myModalLabel">Choose a Bird</h4>
               </div>
+                  
               <div class="modal-body">
-
                 <h1>Birds</h1>
-                    <div class="row">
-
-                    <%for(var i=0;i<bird.length;i++){%>
+                  <div class="row">
+                         <%for(var i=0;i<bird.length;i++){%>
 
                       <div class="col-xs-6 col-md-4">
-                        <a href="#" class="thumbnail">
-                          <img src="<%= bird[i].images[0].url %>" alt="">
-
+                       
+                      <div href="#" class="thumbnail">
+                          <img src="<%= bird[i].images[0].url %>" alt=""> 
                           <div class="caption">
                             <h3 class="birdnamejquery"><%= bird[i].name %></h3>
+                            <p> <a href="#" class="btn btn-default" role="role">Next</a></p>
                           </div>
-                        </a>
+                      </div>
                       </div>
 
                     <% } %>
