--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,11 @@
 
 <div class="container">
 
-     <% if(!user) { %>
+     <% if(!locals.user) { %>
         <h1 id="hero">what the duck</h1>
     <% } %>
 
-    <% if(user) { %>
+    <% if(locals.user) { %>
 
         <p>Welcome <%= user.username %></p>
 
@@ -16,6 +16,15 @@
         <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
           Add a bird
         </button>
+
+        <div>
+            <h2>User's birds</h2>
+            <%for(var x=0;x<userBirds.length;x++){%>
+              <div>
+                <%= userBirds[x].birdName %>
+              </div>
+            <% } %>
+        </div>
 
         <!-- Modal -->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -34,7 +43,7 @@
 
                       <div class="col-xs-6 col-md-4">
                         <a href="#" class="thumbnail">
-                          <img src="<%= bird[i].images[0].url %>" alt="">
+                          <img class="thumbnailImage" src="<%= bird[i].images[0].url %>" alt="">
 
                           <div class="caption">
                             <h3 class="birdnamejquery"><%= bird[i].name %></h3>
@@ -55,13 +64,7 @@
           </div>
         </div>
 
-        <section>
-        <h3>Birds You've Seen</h3>
-<!--         <% for (var i = 0; i < bird.length; i++) { %>
-            <h6><%= bird[i].name %></h6>
-            <img src="<%= bird[i].images %>" class="img-responsive" width="150px">
-        <% } %> -->
-        </section>
+        
 
         <a href="/logout">LOGOUT</a>
 
@@ -79,7 +82,6 @@
                 data: {title: title}
             });
         });        
-
     });
 </script>
 
