--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,3 +92,30 @@ text-align: center
   height: 400px;
   background-color: #CCC;
 }
+
+<!-- BELOW IS THE GEOCODING CODE STUFFS -->
+
+
+/*html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}*/
+
+/*#floating-panel {
+  position: absolute;
+  top: 10px;
+  left: 25%;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #999;
+  text-align: center;
+  font-family: 'Roboto','sans-serif';
+  line-height: 30px;
+  padding-left: 10px;
+}*/
+
+
+
+<!-- ABOVE IS THE GEOCODING CODE THINGY -->
