--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,7 @@
               <div>
                 <%= userBirds[x].birdName %>
               </div>
+              <img width="158" height="150" class="thumbnailImage" src="<%= userBirds[x].birdImage %>">
             <% } %>
         </div>
 
@@ -42,13 +43,12 @@
                     <%for(var i=0;i<bird.length;i++){%>
 
                       <div class="col-xs-6 col-md-4">
-                        <a href="#" class="thumbnail">
-                          <img class="thumbnailImage" src="<%= bird[i].images[0].url %>" alt="">
-
+                        <div class="thumbnail">
+                          <img class="thumbnailImage" src="<%= bird[i].images[0].url %>">
                           <div class="caption">
-                            <h3 class="birdnamejquery"><%= bird[i].name %></h3>
+                            <h3><%= bird[i].name %></h3>
                           </div>
-                        </a>
+                        </div>
                       </div>
 
                     <% } %>
@@ -74,12 +74,13 @@
 
 <script>
     $(document).ready(function(){
-        $('.birdnamejquery').click(function(){
+        $('.thumbnail').click(function(){
             var title = $(this).text();
+            var image = $(this).children('img').attr('src');
             $.ajax({
                 url: 'http://localhost:3000/newSighting',
                 method: "POST",
-                data: {title: title}
+                data: {title: title, birdImage: image}
             });
         });        
     });
