--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,10 +7,11 @@
     <div class= "register text-center col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-6 col-s-offset-3 col-xs-6 col-xs-offset-3">
     	<p class="s-text">Sign up!</p>
         <form method="post" action="/register">
-            <input type='text', name="username", placeholder='Email'>
-            <input type='password', name="password", placeholder='Password'>
-            <input type="submit", class="s-submit">
+            <input type='text' name="username" placeholder="Email" value="<%= username %>">
+            <input type='password' name="password" placeholder='Password'>
+            <input type="submit" class="s-submit">
         </form>
+        <p><%= error %></p>
     </div>
     </div>
 
