user birds are listing on the page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,6 +82,7 @@
                 method: "POST",
                 data: {title: title, birdImage: image}
             });
+            location.reload();
         });        
     });
 </script>
