--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -42,9 +42,16 @@
 	        <li><a href="/map">Map</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
+          <% if(!locals.user) { %>
 	      	<li class="active"><a href="/register">Sign Up<span class="sr-only">(current)</span></a></li>
-	      	<li><a href="/login">Login <span class="sr-only"></span></a></li>
+	      	<% } %>
+
+          <% if(!locals.user) { %>
+            <li><a href="/login">Login <span class="sr-only"></span></a></li>
+          <% } %>
+          <% if(locals.user) { %>
 	        <li><a href="/logout">Logout</a></li>
+          <% } %>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
