--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,10 @@
             $.ajax({
                 url: 'http://localhost:3000/newSighting',
                 method: "POST",
-                data: {title: title, birdImage: image}
+                data: {title: title, birdImage: image},
+                success (){
+
+                }
             });
             location.reload();
         });
