--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,23 +4,27 @@
 <div class="container">
 
      <% if(!locals.user) { %>
-        <h1 id="hero">what the duck</h1>
+        <h1 id="hero">What the Duck</h1>
     <% } %>
 
     <% if(locals.user) { %>
-
+        <div id="welcome">
         <p>Welcome <%= user.username %></p>
+    </div>
 
 
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+        <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal">
           Add a bird
         </button>
-
         <div>
-            <h2>User's birds</h2>
+            <br>
+        </div>    
+
+        <div class="box">
+            <h3>My List of Birds</h3>
             <%for(var x=0;x<userBirds.length;x++){%>
-              <div>
+              <div class="birdName">
                 <%= userBirds[x].birdName %>
               </div>
               <img width="158" height="150" class="thumbnailImage" src="<%= userBirds[x].birdImage %>">
@@ -33,11 +37,9 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                <h4 class="modal-title" id="myModalLabel">Birds</h4>
               </div>
               <div class="modal-body">
-
-                <h1>Birds</h1>
                     <div class="row">
 
                     <%for(var i=0;i<bird.length;i++){%>
@@ -46,7 +48,7 @@
                         <div class="thumbnail">
                           <img class="thumbnailImage" src="<%= bird[i].images[0].url %>">
                           <div class="caption">
-                            <h3><%= bird[i].name %></h3>
+                            <h4><%= bird[i].name %></h4>
                           </div>
                         </div>
                       </div>
