--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,59 +5,45 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script>
-      function initialize() {
-        var mapCanvas = document.getElementById('map');
-        var mapOptions = {
-          center: new google.maps.LatLng(44.5403, -78.5463),
-          zoom: 8,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        }
-        var map = new google.maps.Map(mapCanvas, mapOptions)
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTx6HnaOWxCy2LitrHA0qX1oSkwwUFcpg&signed_in=true&callback=initMap" async defer></script>
   </head>
 
-	<nav class="navbar navbar-default navbar-fixed-top">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="/">
-	      	<img class="duck" alt="home-icon" src="http://i.imgur.com/72nqcYo.png">
-	      </a>
-	    </div>
-
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-	        <li><a href="#">Birds</a></li>
-	        <li><a href="/map">Map</a></li>
-	      </ul>
-	      <ul class="nav navbar-nav navbar-right">
-          <% if(!locals.user) { %>
-	      	<li class="active"><a href="/register">Sign Up<span class="sr-only">(current)</span></a></li>
-	      	<% } %>
-
-          <% if(!locals.user) { %>
-            <li><a href="/login">Login <span class="sr-only"></span></a></li>
-          <% } %>
-          <% if(locals.user) { %>
-	        <li><a href="/logout">Logout</a></li>
-          <% } %>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>
-
-
   <body>
+  	<nav class="navbar navbar-default navbar-fixed-top">
+  	  <div class="container-fluid">
+  	    <!-- Brand and toggle get grouped for better mobile display -->
+  	    <div class="navbar-header">
+  	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+  	        <span class="sr-only">Toggle navigation</span>
+  	        <span class="icon-bar"></span>
+  	        <span class="icon-bar"></span>
+  	        <span class="icon-bar"></span>
+  	      </button>
+  	      <a class="navbar-brand" href="/">
+  	      	<img class="duck" alt="home-icon" src="http://i.imgur.com/72nqcYo.png">
+  	      </a>
+  	    </div>
+
+  	    <!-- Collect the nav links, forms, and other content for toggling -->
+  	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  	      <ul class="nav navbar-nav">
+  	        <li><a href="#">Birds</a></li>
+  	        <li><a href="/map">Map</a></li>
+  	      </ul>
+  	      <ul class="nav navbar-nav navbar-right">
+            <% if(!locals.user) { %>
+  	      	<li class="active"><a href="/register">Sign Up<span class="sr-only">(current)</span></a></li>
+  	      	<% } %>
+
+            <% if(!locals.user) { %>
+              <li><a href="/login">Login <span class="sr-only"></span></a></li>
+            <% } %>
+            <% if(locals.user) { %>
+  	        <li><a href="/logout">Logout</a></li>
+            <% } %>
+  	      </ul>
+  	    </div><!-- /.navbar-collapse -->
+  	  </div><!-- /.container-fluid -->
+  	</nav>
 
       
