--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,6 +65,11 @@
             </div>
           </div>
         </div>
+
+        
+
+        
+
     <% } %>
 
 </div>
@@ -77,15 +82,14 @@
             $.ajax({
                 url: 'http://localhost:3000/newSighting',
                 method: "POST",
-                data: {title: title,birdImage: image}
+                data: {title: title, birdImage: image}
             });
-        }); 
-
+            location.reload();
+        });        
     });
 </script>
 
 
 <% include ./partials/footer %>
-
 
 
