--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,19 +28,19 @@
   	    <!-- Collect the nav links, forms, and other content for toggling -->
   	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   	      <ul class="nav navbar-nav">
-  	        <li><a href="#">Birds</a></li>
-  	        <li><a href="/map">Map</a></li>
+  	        <li class="hover"><a href="#">Birds</a></li>
+  	        <li class="hover"><a href="/map">Map</a></li>
   	      </ul>
   	      <ul class="nav navbar-nav navbar-right">
             <% if(!locals.user) { %>
-  	      	<li class="active"><a href="/register">Sign Up<span class="sr-only">(current)</span></a></li>
+  	      	<li class="hover"><a href="/register">Sign Up<span class="sr-only"></span></a></li>
   	      	<% } %>
 
             <% if(!locals.user) { %>
-              <li><a href="/login">Login <span class="sr-only"></span></a></li>
+              <li class="hover"><a href="/login">Login <span class="sr-only"></span></a></li>
             <% } %>
             <% if(locals.user) { %>
-  	        <li><a href="/logout">Logout</a></li>
+  	        <li class="hover"><a href="/logout">Logout</a></li>
             <% } %>
   	      </ul>
   	    </div><!-- /.navbar-collapse -->
