--- a/views/partials/userBird.ejs
+++ b/views/partials/userBird.ejs
@@ -1,4 +1,4 @@
-              <div class="userBird">
-                <%= userBirds[x].birdName %>
+              <div>
+                <%= bird.birdName %>
               </div>
-              <img width="158" height="150" class="thumbnailImage" src="<%= userBirds[x].birdImage %>">
+              <img width="158" height="150" class="thumbnailImage" src="<%= bird.birdImage %>">
