--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,7 +45,7 @@ a {
 }
 
 h1 {
-    font-family: Sarina;
+    /*font-family: Sarina;*/
     color: #BE9B77;
     font-size: 5em;
     letter-spacing: 0.4em;
