--- a/views/partials/userBird.ejs
+++ b/views/partials/userBird.ejs
@@ -1,4 +1,7 @@
-              <div>
+              <div class="birdName">
                 <%= bird.birdName %>
               </div>
+              <div class="birdImage">
               <img width="158" height="150" class="thumbnailImage" src="<%= bird.birdImage %>">
+              </div>
+              <br>
