removed add and alt view from posting to list

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,7 @@
 <script>
     $(document).ready(function(){
         $('.thumbnail').click(function(){
-            var title = $(this).text();
+            var title = $(this).find('h4').text();
             var image = $(this).children('img').attr('src');
             $.ajax({
                 url: 'http://localhost:3000/newSighting',
