--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,6 +34,7 @@ a {
 .box {
     /*background: rgba(96, 75, 48, 0.5);
     background: rgba(212, 211, 211, 0.6);*/
+    overflow: auto;
     background: rgba(212, 200, 188, 0.6);
     padding: 1.5%;
     -webkit-border-radius: 10px 10px 10px 10px;
@@ -114,6 +115,7 @@ h4 {
   width: 500px;
   height: 400px;
   background-color: #CCC;
+  float: none;
 }
 
 <!-- BELOW IS THE GEOCODING CODE STUFFS -->
