--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,12 +19,12 @@
         </button>
         <div>
             <br>
-        </div>    
+        </div>
 
         <div class="box">
           <h3>My List of Birds</h3>
 
-  
+
         <div id="userBirdList">
             <%for(var x=0;x<userBirds.length;x++){%>
               <% var bird= userBirds[x] %>
@@ -46,7 +46,7 @@
                     <%for(var i=0;i<birds.length;i++){%>
 
                       <div class="col-xs-6 col-md-4">
-                        <div class="thumbnail">
+                        <div class="thumbnail" data-birdId= <%= birds[i]._id %>>
                           <img class="thumbnailImage" src="<%= birds[i].images[0].url %>">
                           <div class="caption">
                             <h4><%= birds[i].name %></h4>
@@ -77,7 +77,8 @@
             var title = $(this).text();
             var image = $(this).children('img').attr('src');
             $.ajax({
-                url: 'http://localhost:3000/newSighting',
+                url: '/newSighting',
+                // url: 'http://localhost:3000/newSighting',
                 method: "post",
                 data: {title: title, birdImage: image}
             }).done(function(newBird) {
