fixed the buttons and made them all look the same yaaay

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 		  <form method="post" action="/login">
 		    <input class="textboxlogin" type='text', name="username", placeholder='Email'>
 		    <input class="textboxlogin" type='password', name="password", placeholder='Password'>
-		    <input class="submit" type="submit">
+		    <input class="btn btn-info btn-sm submit" type="submit">
 		  </form>
 		 </div> 
 	 </div>
