--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,7 +12,7 @@
             <input type='text' name="username" placeholder="Email" value="<%= username %>">
             <input type='password' name="password" placeholder='Password'>
             <br><br>
-            <input type="submit" class="s-submit">
+            <input type="submit" class="btn btn-info btn-sm submit">
         </form>
         <p><%= error %></p>
     </div>
