--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,7 +30,7 @@
   	    <!-- Collect the nav links, forms, and other content for toggling -->
   	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   	      <ul class="nav navbar-nav">
-  	        <li class="hover"><a href="#">About</a></li>
+  	        <li class="hover"><a href="/about">About</a></li>
   	      </ul>
   	      <ul class="nav navbar-nav navbar-right">
             <% if(!locals.user) { %>
