--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Birds</h4>
-                <input type="text" class="locationText">
+                <input type="text" class="locationText" placeholder="Hey stupid. Your address goes here.">
               </div>
               <div class="modal-body">
                     <div class="row">
